<resources>
    <string name="app_name">First Aid</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="id_no">ID Number</string>
    <string name="gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="line1">Address Line 1(Street)</string>
    <string name="city">City</string>
    <string name="postalCode">Postal Code</string>
    <string name="med">Doctor Code</string>
    <string name="Register">Register</string>
    <string name="phone">Phone No.</string>
    <string name="hello_world">Hello World</string>
    <string name="photo">Browse Image</string>
    <string name="del">Delete All</string>
    <string name="refresh">Refresh</string>
    <string name="about_app">About App</string>
    <string name="news">Read News</string>
    <string name="action_next">Next</string>
    <string name="delete">Delete</string>

    <string name="FCM_TOKEN">com.example.rasekgala.firstaid.pref_token</string>
    <string name="FCM_PREFF">com.example.rasekgala.firstaid.pref_name</string>

    <string name="DOC_PHONE">com.example.rasekgala.firstaid.doc_phone</string>
    <string name="DOC_PREF">com.example.rasekgala.firstaid.doctor_pref</string>

</resources>
