<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rasekgala.firstaid.Register2">

    <LinearLayout
        android:orientation="vertical"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:textColor="#000000"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:id="@+id/textView5" />

        <EditText
            android:layout_width="341dp"
            android:layout_height="40dp"
            android:textColor="#ffffff"
            android:background="#0099cc"
            android:id="@+id/editTextName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/surname"
            android:id="@+id/textView6" />

        <EditText
            android:layout_width="345dp"
            android:layout_height="40dp"
            android:textColor="#ffffff"
            android:background="#0099cc"
            android:id="@+id/editTextSurname" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/id_no"
            android:id="@+id/textView7" />

        <EditText
            android:layout_width="355dp"
            android:layout_height="40dp"
            android:background="#0099cc"
            android:textColor="#ffffff"
            android:inputType="number"
            android:maxLength="13"
            android:ems="10"
            android:id="@+id/editTextIDentity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:text="@string/gender"
            android:id="@+id/textView8" />

        <RadioGroup
            android:layout_width="match_parent"
            android:id="@+id/group"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/radioButtonMale" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/radioButtonFemale" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/email"
            android:id="@+id/textView9" />

        <EditText
            android:layout_width="356dp"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:textColor="#ffffff"
            android:background="#0099cc"
            android:ems="10"
            android:id="@+id/editTextEmail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/phone"
            android:id="@+id/textView10" />

        <EditText
            android:layout_width="354dp"
            android:layout_height="40dp"
            android:inputType="phone"
            android:background="#0099cc"
            android:textColor="#ffffff"
            android:maxLength="10"
            android:ems="10"
            android:id="@+id/editTextPhone" />
    </LinearLayout>

</RelativeLayout>
