<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rasekgala.firstaid.Register">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="2dp"
        android:background="#ffffff"
        android:layout_height="560dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/line1"
            android:textColor="#000000"
            android:id="@+id/textView13" />

        <EditText
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:textColor="#ffffff"
            android:background="#0099cc"
            android:id="@+id/editTextAddressLine1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:text="@string/city"
            android:id="@+id/textView14" />

        <EditText
            android:layout_width="338dp"
            android:layout_height="40dp"
            android:background="#0099cc"
            android:textColor="#ffffff"
            android:id="@+id/editTextCity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:text="@string/postalCode"
            android:textColor="#000000"
            android:id="@+id/textView15" />

        <EditText
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:background="#0099cc"
            android:maxLength="4"
            android:inputType="number"
            android:textColor="#ffffff"
            android:ems="10"
            android:id="@+id/editTextPostalCode" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/med"
            android:textColor="#000000"
            android:id="@+id/textView155" />
        <EditText
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:background="#0099cc"
            android:inputType="number"
            android:textColor="#ffffff"
            android:maxLength="9"
            android:ems="10"
            android:id="@+id/editTextDoctorCode" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"

            android:background="#0099cc"

            android:text="@string/Register"
            android:id="@+id/buttonRegister"
            android:onClick="register" />
    </LinearLayout>

</RelativeLayout>
